Use java 17 `toList()`
Signed-off-by: TheMode <themode@outlook.fr>